--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 pluginManagement {
 	repositories {
 		gradlePluginPortal()
+		maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
 }
@@ -36,3 +37,5 @@ rootProject.name = "spring"
 rootProject.children.each {project ->
 	project.buildFileName = "${project.name}.gradle"
 }
+include 'spring-lean'
+
